2003-08-05  Paul Eggert  <eggert@twinsun.com>

	* bumpalloc.h: Remove.

2003-08-04  Paul Eggert  <eggert@twinsun.com>

	* getloadavg.c: Change copyright notice and spacing to conform to
	GNU coding style.

	Merge from coreutils.
	* error.c [!USE_IN_LIBIO]: Omit this case; assume USE_IN_LIBIO is 1.
	From glibc.
	* getdate.y (date): Also accept dates like May-23-2003; suggestion
	from Karl Berry, implemented by Jim Meyering.
	* getgroups.c: Include "xalloc.h" instead of declaring xalloc fns;
	from Dmitry V. Levin.
	Remove anachronistic cast of xrealloc.
	* fnmatch_.h (__const): Remove.  Use 'const'.
	* fnmatch_loop.c (NEW_PATTERN): Cast alloca return value to proper
	type. Otherwise, it wouldn't compile with at least /bin/cc on
	ymp-cray-unicos9.0.2.X.
	Combine two mostly-identical uses of alloca into one.
	Thanks to the Cray-Cyber project for access to a Cray Y-MP.

2003-08-04  Dave Love <d.love@dl.ac.uk>

	[From Emacs.]

	* getloadavg.c: Check `__unix' as well as `unix'.  Use #ifdef, not
	#if.  Check HAVE_LIBKSTAT as well as LOAD_AVE_TYPE.  Check
	F_SETFD, not FD_SETFD.  Use HAVE_STRUCT_NLIST_N_UN_N_NAME, not
	obsolete NLIST_NAME_UNION.
	[__GNU__]: Undef BSD and FSCALE.
	[!NLIST_STRUCT]: Remove conditional definition of NLIST_STRUCT.

2003-08-03  Paul Eggert  <eggert@twinsun.com>

	* stdbool_.h (_Bool): Make it signed char, instead of
	an enum type, so that it's guaranteed to promote to int.  See:
	<http://mail.gnu.org/archive/html/bug-gnulib/2003-07/msg00124.html>

2003-07-31  Paul Eggert  <eggert@twinsun.com>

	* strerror.c: Include config.h, limits.h.  Declare sprintf.
	(strerror): Don't assume that a printable int fits in 14 bytes.

2003-07-24  Derek Robert Price  <derek@ximbiot.com>
            Bruno Haible  <bruno@clisp.org>

	* getline.h (getline, getdelim): Change return type to ssize_t.
	* getline.c (getline, getdelim): Likewise.
	Remove _GNU_SOURCE define; now it's defined in config.h through
	m4/getline.m4.

2003-07-22  Paul Eggert  <eggert@twinsun.com>
